<resources>
    <string name="app_name">无聊帮</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="welcome">欢迎来到</string>
    <string name="username">用户名：</string>
    <string name="psw">密码：</string>
    <string name="rememberpsw">记住密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="rpsw">确认密码：</string>
    <string name="btn_register">注 册</string>
</resources>
